<resources>
    <string name="app_name">Trading journal</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="incorrect_email_or_password">Incorrect email or password</string>
    <string name="email_in_use">This email is already in use</string>
    <string name="account_created">Account created</string>
    <string name="query_error">Error in the query, App failure</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="datos">Datos</string>
    <string name="tittle_exit_app">Are you sure you want to exit the application?</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="CANCEL">CANCEL</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="trades">TRADES</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="create_trade">CREATE TRADE</string>
    <string name="state">STATE:</string>
    <string name="entry">ENTRY:</string>
    <string name="year">YEAR:</string>
    <string name="day">DAY:</string>
    <string name="month">MONTH:</string>
    <string name="market">MARKET:</string>
    <string name="contracts">CONTRACTS:</string>
    <string name="point_value">POINT VALUE:</string>
    <string name="points">POINTS:</string>
    <string name="emotion">EMOTION:</string>
    <string name="create">CREATE</string>
    <string name="save">SAVE</string>
    <string name="add_trade">ADD TRADE</string>
    <string name="view_trades">VIEW TRADES</string>
    <string name="notes">NOTES</string>
    <string name="stats">STATS</string>
    <string name="register">REGISTER</string>
    <string name="logout">LOGOUT</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="default_web_client_id1" translatable="false">23537378334-eh1hu3kun56e6v97v320vk3e99btikc8.apps.googleusercontent.com</string>
    <string name="reviews">REVIEWS</string>
    <string name="review">REVIEW:</string>
    <string name="trade">TRADE:</string>
    <string name="barra">/</string>
    <string name="eliminarTrade">Are you sure you want to delete this trade?</string>
    <string name="eliminarReview">Are you sure you want to delete this review?</string>
    <string name="lista_trades">TRADES:</string>
    <string name="cero">0</string>
    <string name="total">TOTAL:</string>
    <string name="titulo_edit_trade">Edit Trade</string>
    <string name="titulo_see_trade">See Trade</string>
    <string name="titulo_see_review">See Review</string>
    <string name="cerrar">CLOSE</string>
    <string name="real">REAL</string>
    <string name="simulated">SIMULATED</string>
    <string name="largo">LONG</string>
    <string name="corto">SHORT</string>
    <string name="enero">January</string>
    <string name="febrero">February</string>
    <string name="marzo">March</string>
    <string name="abril">April</string>
    <string name="mayo">May</string>
    <string name="junio">June</string>
    <string name="julio">July</string>
    <string name="agosto">August</string>
    <string name="septiembre">September</string>
    <string name="octubre">October</string>
    <string name="noviembre">November</string>
    <string name="diciembre">December</string>
    <string name="anxiety">Anxiety</string>
    <string name="greed">Greed</string>
    <string name="confidence">Confidence</string>
    <string name="censervative">Conservative</string>
    <string name="fear">Fear</string>
    <string name="paciencia">Patience</string>
    <string name="haste">Haste</string>
    <string name="revenge">Revenge</string>
    <string name="calm">Calm</string>

    <string-array name="selectState">
        <item> </item>
        <item>@string/real</item>
        <item>@string/simulated</item>
    </string-array>

    <string-array name="selectEntry">
        <item> </item>
        <item>@string/largo</item>
        <item>@string/corto</item>
    </string-array>

    <string-array name="selectYear">
        <item> </item>
        <item>2023</item>
    </string-array>

    <string-array name="selectDay">
        <item> </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="selectMonth">
        <item> </item>
        <item>@string/enero</item>
        <item>@string/febrero</item>
        <item>@string/marzo</item>
        <item>@string/abril</item>
        <item>@string/mayo</item>
        <item>@string/junio</item>
        <item>@string/julio</item>
        <item>@string/agosto</item>
        <item>@string/septiembre</item>
        <item>@string/octubre</item>
        <item>@string/noviembre</item>
        <item>@string/diciembre</item>
    </string-array>

    <string-array name="selectMarket">
        <item> </item>
        <item>E-MINI SP 500 FUTURES (ES)</item>
        <item>MICRO SP 500 FUTURES (MES)</item>
        <item>E-MINI NasDaq 100 FUTURES (NQ)</item>
        <item>MICRO NasDaq 100 FUTURES (MNQ)</item>
        <item>EURO FUTURE (6E)</item>
        <item>E-MINI Dow Jones INDEX (YM)</item>
        <item>MICRO E-MINI Dow Jones INDEX (MYM)</item>
        <item>SOYBEAN FUTURES (ZS)</item>
        <item>E-MINI GOLD FUTURES (QO)</item>
        <item>MICRO GOLD FUTURES (MGC)</item>
        <item>SILVER FUTURES (SI)</item>
        <item>Crude Oil FUTURES (CL)</item>
        <item>MICRO Crude Oil FUTURES(MCL)</item>
        <item>NATURAL GAS (NG)</item>
        <item>DAX (FDAX)</item>
        <item>MINI DAX (FDXM)</item>
        <item>MICRO DAX (FDXS)</item>
        <item>STOXX (FESX)</item>
        <item>MICRO STOXX (FSXE)</item>
    </string-array>

    <string-array name="selectEmotion">
        <item> </item>
        <item>@string/anxiety</item>
        <item>@string/greed</item>
        <item>@string/confidence</item>
        <item>@string/censervative</item>
        <item>@string/fear</item>
        <item>@string/paciencia</item>
        <item>@string/haste</item>
        <item>@string/revenge</item>
        <item>@string/calm</item>
    </string-array>
    <string name="title_activity_review">ReviewActivity</string>
    <string name="name_datos">NAME</string>
    <string name="apellidos">SURNAME</string>
    <string name="email_mayus">EMAIL</string>
    <string name="new_review">NEW REVIEW</string>
    <string name="profit">PROFIT:</string>
    <string name="stoploss">STOP:</string>
    <string name="stats_title_activity">STATS</string>
    <string name="stop_loss_stats">STOP LOSS:</string>
    <string name="profits_stats">PROFITS:</string>
    <string name="initial_cash">INITIAL CASH:</string>
    <string name="economic_results">ECONOMIC RESULTS</string>
    <string name="market_data">MARKET DATA:</string>
    <string name="market_Stats">MARKET:</string>
    <string name="favorite_market">FAVORITE MARKET</string>
</resources>