<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CFC0"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/audiowide"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtEmailLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:fontFamily="@font/audiowide"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPasswordLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:fontFamily="@font/audiowide"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLoginLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:backgroundTint="#000000"
                android:fontFamily="@font/audiowide"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/btnGoogleLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/icons8_logo_de_google_48"
                android:drawablePadding="10dp"
                android:text="@string/sign_in_with_google"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginBottom="55dp"
                    android:fontFamily="@font/audiowide"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="#373434" />

                <TextView
                    android:id="@+id/lblSignUpLoginActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="56dp"
                    android:fontFamily="@font/audiowide"
                    android:text="SIGN UP"
                    android:textColor="#000000"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>