<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_fondo_app"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView26"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/review"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spDayCreateReview"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FAFAFA"
                android:backgroundTint="#FFFFFF"
                android:hapticFeedbackEnabled="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spMonthCreateReview"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FAFAFA"
                android:backgroundTint="#FFFFFF"
                android:hapticFeedbackEnabled="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spYearCreateReview"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#FAFAFA"
                android:backgroundTint="#FFFFFF"
                android:hapticFeedbackEnabled="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtTextCreateReview"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FDFDFD"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

</LinearLayout>